fixed gradient issue on safari

--- a/styles.css
+++ b/styles.css
@@ -246,9 +246,9 @@ footer .contact-details {
 
 @media only screen and (max-width: 1190px) {
   .jumbotron {
-    background: -moz-linear-gradient(to right, rgba(232,31,31,1) 0%, rgba(0,15,255,0) 100%), url('./assets/img/JHD-collage.png') no-repeat bottom right; /* FF3.6-15 */
-    background: -webkit-linear-gradient(to right, rgba(232,31,31,1) 0%,rgba(0,15,255,0) 100%), url('./assets/img/JHD-collage.png') no-repeat bottom right; /* Chrome10-25,Safari5.1-6 */
-    background: linear-gradient(to right, rgba(232,31,31,1) 0%,rgba(0,15,255,0) 100%), url('./assets/img/JHD-collage.png') no-repeat bottom right; /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+    background: -moz-linear-gradient(to right, rgba(232,31,31,1) 0%, rgba(232,31,31,0) 100%), url('./assets/img/JHD-collage.png') no-repeat bottom right; /* FF3.6-15 */
+    background: -webkit-linear-gradient(to right, rgba(232,31,31,1) 0%,rgba(232,31,31,0) 100%), url('./assets/img/JHD-collage.png') no-repeat bottom right; /* Chrome10-25,Safari5.1-6 */
+    background: linear-gradient(to right, rgba(232,31,31,1) 0%,rgba(232,31,31,0) 100%), url('./assets/img/JHD-collage.png') no-repeat bottom right; /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
 }
 /*Media Queries*/
 /* Medium Devices, Desktops */
@@ -269,9 +269,9 @@ footer .contact-details {
     background: none;
   }
   .jumbotron {
-    background: -moz-linear-gradient(bottom, rgba(232,31,31,1) 0%, rgba(0,15,255,0) 100%), url('./assets/img/collage-mobile3.jpg') no-repeat bottom center; /* FF3.6-15 */
-    background: -webkit-linear-gradient(bottom, rgba(232,31,31,1) 0%,rgba(0,15,255,0) 100%), url('./assets/img/collage-mobile3.jpg') no-repeat bottom center; /* Chrome10-25,Safari5.1-6 */
-    background: linear-gradient(to top, rgba(232,31,31,1) 0%,rgba(0,15,255,0) 100%), url('./assets/img/collage-mobile3.jpg') no-repeat bottom center; /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+    background: -moz-linear-gradient(bottom, rgba(232,31,31,1) 0%, rgba(232,31,31,0) 100%), url('./assets/img/collage-mobile3.jpg') no-repeat bottom center; /* FF3.6-15 */
+    background: -webkit-linear-gradient(bottom, rgba(232,31,31,1) 0%,rgba(232,31,31,0) 100%), url('./assets/img/collage-mobile3.jpg') no-repeat bottom center; /* Chrome10-25,Safari5.1-6 */
+    background: linear-gradient(to top, rgba(232,31,31,1) 0%,rgba(232,31,31,0) 100%), url('./assets/img/collage-mobile3.jpg') no-repeat bottom center; /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
   }
 }
 
